--- a/Activity01.ipynb
+++ b/Activity01.ipynb
@@ -72,7 +72,7 @@
         "random_names = random_scores = dict(zip(random_names, random_scores))\n",
         "print(random_names)\n",
         "\n",
-        "print(\"Average:\", average)\n"
+        "print(\"Overall Average:\", average)\n"
       ]
     }
   ]
