--- a/Activity01.ipynb
+++ b/Activity01.ipynb
@@ -56,7 +56,7 @@
           "name": "stdout",
           "text": [
             "{'Kimberly Beebe': 84, 'Michael Evans': 97, 'Christopher Burkhead': 80, 'Dennis Foxman': 67, 'Mark Robertson': 78, 'James Edwards': 80, 'Ruben Evans': 99, 'Tamar Quinto': 82, 'Geoffrey Lundeen': 61, 'Karen Weaver': 91}\n",
-            "Average: 81.9\n"
+            "Overall Average: 81.9\n"
           ]
         }
       ],
