for snake feeding

--- a/Python Basics.ipynb
+++ b/Python Basics.ipynb
@@ -91,7 +91,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Slicing Cake"
+        "Slicing"
       ],
       "metadata": {
         "id": "XEbRTQJcrxwP"
@@ -157,7 +157,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#dictzxc"
+        "#dict"
       ],
       "metadata": {
         "id": "PVB8_IGDvtY8"
